<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/app_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_bar_bg"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/app_name_caps"
                android:textSize="23sp" />
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/myTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/TabText"
            app:tabSelectedTextColor="@color/tabYelllow"
            app:tabTextColor="@color/tabWhite"
            app:tabIndicator="@drawable/tab_indicator" >

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stats_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabCountries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countries_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSymptoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptoms_tab" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_tab" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>